--- a/app/views/item_purchases/index.html.erb
+++ b/app/views/item_purchases/index.html.erb
@@ -14,7 +14,7 @@
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.price %></p>
-          <p class='item-price-sub-text'><%= DeliveryFee.find(@item.delivery_fee_id).name %></p>
+          <p class='item-price-sub-text'><%= @item.delivery_fee.name %></p>
         </div>
       </div>
     </div>
@@ -32,8 +32,8 @@
     <%# /支払額の表示 %>
 
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-    <%#=  render 'shared/error_messages', model: f.object %>
+    <%= form_with(model:@purchase_form, url:item_item_purchases_path ,id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
+    <%=  render 'shared/error_messages', model: @purchase_form %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
