--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,12 +132,11 @@
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
 
-            <%# 商品が売れていればsold outを表示しましょう %>
-            <%# 購入機能実装前のため保留 %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div> 
-            <%# //商品が売れていればsold outを表示しましょう %>
+            <% unless item.item_purchase.nil? %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div> 
+            <% end %>
 
           </div>
           <div class='item-info'>
