--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,12 +26,12 @@
     </div>
 
     <%# 購入機能見実装のため、「販売済みの時に表示されない機能」は未実装 %>
-    <% if user_signed_in? %>   
+    <% if user_signed_in? && @item.item_purchase.nil? %>   
       <% if @item.user_id == current_user.id %>
         <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
         <p class='or-text'>or</p>
         <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
-      <% elsif @item.item_purchase.nil? %>
+      <% else %>
         <%= link_to '購入画面に進む', item_item_purchases_path(@item.id) ,class:"item-red-btn"%>
       <% end %>
     <% end %>
